[Fix:slider] Add position relative and background to resolve bug. Change z-indexs

--- a/src/assets/styles/helpers/_variables.scss
+++ b/src/assets/styles/helpers/_variables.scss
@@ -46,8 +46,9 @@ $border-radius-base: 4px;
 //   z-index     //
 ///////////////////
 $z-index-tooltip: 10000;
-$z-index-list-dropdown: 5000;
-$z-index-aside: 1000;
+$z-index-list-dropdown: 8500;
+$z-index-header: 9000;
+$z-index-aside: 9000;
 
 ///////////////////
 //  Grid-layout  //
